fix(ui): fix user code cut off on settings > personalize (#1358)

--- a/components/ui/Breadcrumbs/Breadcrumbs.less
+++ b/components/ui/Breadcrumbs/Breadcrumbs.less
@@ -11,4 +11,14 @@
   }
   font-family: @primary-font;
   font-size: @text-size;
+  li {
+    max-width: 100%;
+  }
+  li > a {
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+  }
 }
